fix navbar header icons text alignment

--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -60,6 +60,7 @@
 
 .nav-format p {
   font-size: .5em;
+  text-align: center;
 }
 .logged-in {
   padding-top: 14px;
